fixed character select spacing

--- a/src/index.css
+++ b/src/index.css
@@ -116,10 +116,10 @@ body {
     margin-bottom: 301px;
     margin-top: 100px;
     position: absolute;
-    left: 480px;
+    left: 50%;
     z-index: -1;
     top: 115px;
-    transform: translate(0, -50%);
+    transform: translate(-50%, -50%);
 }
 
 
@@ -179,7 +179,8 @@ body {
 
 #runner{
     position: absolute;
-    left: 356px;
+    left: calc(50% + 40px);
+    transform:translate(-50%, 0);
     width: 446px;
     height: auto;
     z-index: -1;
@@ -192,12 +193,13 @@ body {
 
 #hat{
     position:absolute;
-    left:440px;
+    left:calc(50% - 35px);
+    transform:translate(-50%, 0);
     top:50px;
     width:130px;
     height:auto;
 }
 
 .spacer{
-    height:500px;
+    height:550px;
 }
